--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "homepage": "https://github.com/codexlin/vue-ace-admin#readme",
   "engines": {
-    "node": "20.x"
+    "node": "^20.19.0 || >=22.12.0"
   },
   "packageManager": "pnpm@10.14.0",
   "keywords": [
@@ -28,7 +28,10 @@
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint:eslint": "eslint --fix ./src",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:fast": "oxlint --fix && eslint --fix ./src",
     "lint:prettier": "prettier --write src/",
+    "format": "prettier --write --experimental-cli src/",
     "stylelint": "stylelint ./src/**/*.{scss,vue}",
     "stylelint:fix": "stylelint ./src/**/*.{scss,vue} --fix",
     "lint:lint-staged": "lint-staged",
@@ -46,13 +49,13 @@
     "@codexlin/ace-admin-hooks": "workspace:*",
     "@codexlin/ace-admin-ui": "workspace:*",
     "@tinymce/tinymce-vue": "^6.1.0",
-    "@vueuse/core": "^13.0.0",
+    "@vueuse/core": "^14.1.0",
     "@vueuse/motion": "^3.0.3",
     "ant-design-vue": "~4.2.6",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.5",
-    "echarts": "^5.6.0",
+    "echarts": "^6.0.0",
     "highlight.js": "^11.10.0",
     "marked": "^13.0.2",
     "motion-v": "^1.7.4",
@@ -61,7 +64,7 @@
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "radash": "^12.1.0",
-    "tinymce": "^7.7.2",
+    "tinymce": "^8.3.0",
     "tinymce-i18n": "^25.3.17",
     "vue": "~3.5.13",
     "vue-echarts": "latest",
@@ -75,46 +78,46 @@
     "@iconify-json/ion": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/ri": "^1.2.5",
-    "@iconify/vue": "^4.3.0",
+    "@iconify/vue": "^5.0.0",
+    "@prettier/plugin-oxc": "^0.1.3",
     "@rushstack/eslint-patch": "^1.11.0",
-    "@tsconfig/node18": "^18.2.4",
+    "@tsconfig/node24": "^24.0.3",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^18.19.86",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "@types/node": "^24.10.1",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vitejs/plugin-vue-jsx": "^5.1.2",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/tsconfig": "^0.7.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint": "^9.39.1",
     "eslint-plugin-import-x": "^4.10.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-oxlint": "^1.29.0",
+    "eslint-plugin-vue": "^10.5.1",
     "fast-glob": "3.3.3",
+    "jiti": "^2.6.1",
     "lint-staged": "^15.5.0",
-    "npm-run-all2": "^7.0.2",
+    "npm-run-all2": "^8.0.4",
     "postcss": "8.4.49",
+    "postcss-html": "^1.8.0",
     "postcss-scss": "4.0.9",
     "prettier": "^3.5.3",
-    "prettier-stylelint": "^0.4.2",
     "sass": "^1.86.3",
     "simple-git-hooks": "^2.12.1",
     "stylelint": "^16.18.0",
-    "stylelint-config-recess-order": "6.0.0",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard-scss": "13.1.0",
-    "typescript": "5.5.4",
-    "typescript-eslint": "^8",
-    "unplugin-auto-import": "^19.1.2",
+    "sugarss": "^5.0.1",
+    "typescript": "~5.9.0",
+    "unplugin-auto-import": "^20.3.0",
     "unplugin-icons": "^22.1.0",
-    "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.5",
+    "unplugin-vue-components": "^30.0.0",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.8"
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vue-tsc": "^3.1.5"
   },
   "config": {
     "commitizen": {
@@ -128,7 +131,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,vue,js,tsx,jsx}": [
-      "eslint --fix",
+      "oxlint . --fix -D correctness --ignore-path .gitignore",
       "prettier --write"
     ],
     "src/**/*.json": [
