--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -73,18 +73,21 @@
   },
   "peerDependencies": {
     "ant-design-vue": ">=4.0.0",
-    "vue": ">=3.4.0",
-    "axios": "^1.8.4"
+    "axios": "^1.8.4",
+    "vue": ">=3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vitejs/plugin-vue-jsx": "^5.1.2",
     "ant-design-vue": "~4.2.6",
+    "eslint-plugin-oxlint": "~1.29.0",
+    "oxlint": "~1.29.0",
+    "radash": "^12.1.0",
+    "rolldown-vite": "^7.2.10",
     "typescript": "5.5.4",
-    "vite": "^6.2.5",
+    "vite": "^7.2.7",
     "vite-plugin-dts": "^4.5.4",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.8",
-    "radash": "^12.1.0"
+    "vue-tsc": "^2.2.8"
   }
 }
