--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,7 @@
-root = true
-
-[*]
+[*.{js,jsx,mjs,cjs,ts,tsx,mts,cts,vue,css,scss,sass,less,styl}]
 charset = utf-8
-indent_style = space
 indent_size = 2
-end_of_line = lf
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.md]
-trim_trailing_whitespace = false
-
-[*.{json,yml,yaml}]
-indent_size = 2
-
-[*.{js,ts,jsx,tsx,vue}]
-indent_size = 2
-
-[Makefile]
-indent_style = tab
+end_of_line = lf
