--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -85,7 +85,7 @@
     "radash": "^12.1.0",
     "rolldown-vite": "^7.2.10",
     "typescript": "5.5.4",
-    "vite": "^7.2.7",
+    "vite": "8.0.0-beta.0",
     "vite-plugin-dts": "^4.5.4",
     "vue": "^3.5.13",
     "vue-tsc": "^2.2.8"
